--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,7 +57,7 @@ header a {
   color: #555;
 }
 .workout-details span {
-  position: absolute;
+  /* position: absolute; */
   top: 20px;
   right: 20px;
   cursor: pointer;
